Replaced browser router with hash router, fixed the list of items inside a list not being scrollable and overflowing outside the container, and a min and a max height for list meta

--- a/src/pages/ShoppingList/ShoppingList.module.css
+++ b/src/pages/ShoppingList/ShoppingList.module.css
@@ -3,7 +3,7 @@
     height: 100%;
     max-height: calc(100vh - var(--bottom-offset));
     display: grid;
-    grid-template-rows: 50px 100px 50px 1fr auto;
+    grid-template-rows: 50px auto 50px 1fr;
     color: var(--text-color);
     padding: 10px;
     position: relative;
@@ -42,11 +42,15 @@
     display: flex;
     flex-direction: column;
     gap: 10px;
+    min-height: 100px;
+    max-height: 200px;
+    padding-bottom: 15px;
 }
 .listItemsContainer {
     display: flex;
     flex-direction: column;
     gap: 10px;
+    overflow-y: auto;
 }
 .newItemButton {
     width: 50px;
