--- a/src/pages/ViewGroup/Lists/ViewList/ViewList.module.css
+++ b/src/pages/ViewGroup/Lists/ViewList/ViewList.module.css
@@ -3,7 +3,7 @@
     height: 100%;
     max-height: calc(100vh - var(--bottom-offset));
     display: grid;
-    grid-template-rows: 100px 50px 1fr auto;
+    grid-template-rows: minmax(100px, 150px) 50px 1fr;
     color: var(--text-color);
     padding: 10px;
     position: relative;
@@ -34,11 +34,15 @@
     display: flex;
     flex-direction: column;
     gap: 10px;
+    min-height: 100px;
+    max-height: 150px;
 }
 .listItemsContainer {
     display: flex;
     flex-direction: column;
     gap: 10px;
+    overflow-y: auto;
+    height: 100%;
 }
 .newItemButton {
     width: 50px;
